# deso3d

./: .gitignore
godot/: ContextMenu.gdns  ContextMenu.tscn  DebugDraw.gdns  FormationUI.tscn  FormationUnit.tscn  GameWorld.tscn  Griddy.tscn  MainMenu.gdns  MainMenu.tscn  Unit.tscn  basic.meshlib  libdeso3d.gdnlib  mu.tscn  project.godot  save_0.json
godot/.import/: Preview.png-c0f04848c92106fa9696d2882b37efc0.md5  Preview.png-c0f04848c92106fa9696d2882b37efc0.stex  Sample.png-40b27c4e269216cbf1e92771eda6b574.md5  Sample.png-40b27c4e269216cbf1e92771eda6b574.stex  bed.dae-22492eb2daec3c4036d4d0f1e7a7c662.md5  bed.dae-22492eb2daec3c4036d4d0f1e7a7c662.scn  bed.fbx-4cbaa1b6626bad18ff662427fe84d7f2.md5  bed.fbx-4cbaa1b6626bad18ff662427fe84d7f2.scn  bed.glb-8e40598864fc82e0ec1c8532ddab974f.md5  bed.glb-8e40598864fc82e0ec1c8532ddab974f.scn  bed.obj-f6f5fcbf28601ad112e196c0df6e88a8.md5  bed.obj-f6f5fcbf28601ad112e196c0df6e88a8.mesh  bed.png-8fdaf813ffc4b7fd63ba74c3f49e0717.md5  bed.png-8fdaf813ffc4b7fd63ba74c3f49e0717.stex  bed_NE.png-7f3476c9673e363bac6d41cc501be1e4.md5  bed_NE.png-7f3476c9673e363bac6d41cc501be1e4.stex  bed_NW.png-65f8f8e53e790061f3fa64b30a300e9c.md5  bed_NW.png-65f8f8e53e790061f3fa64b30a300e9c.stex  (+5788 more)
rust/: Cargo.toml  build.sh  new  test.sh  watch.sh
rust/src/: animation.rs  camera.rs  contextmenu.rs  debug.rs  dragndrop.rs  enemy.rs  formation.rs  gameworld.rs  input.rs  lib.rs  main_menu.rs  movement.rs  old-movement.rs  player.rs  procgen.rs  saveload.rs  spawner.rs  tilemap.rs  unit.rs
test/: Scene.tscn  libdeso3d.gdnlib  main.gd  project.godot
(+21 files in other folders)
