[package]
name = "deso3d"
version = "0.1.0"
authors = ["Hagsteel <me@hagsteel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["dylib"]

[features]
godot_test = []

[dependencies]
gdnative = "0.8.0"
gdextras = { path = "../../gdextras"} 
legion = { git = "https://github.com/tomgillen/legion" } 
lazy_static = "1.4.0"
bracket-pathfinding = "0.7.0"
twox-hash = "1.5.0"
euclid = { version = "0.20.10", features = ["serde"] }
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
rand = { version = "0.7.3", features = ["small_rng"] }
